# modular-insertion-system

./: .gitignore  README.md  pyproject.toml
components/: arc-slider.md  arc.md  camera-module.md  collimator-module.md  frame.md  probe-module.md
documentation/source/: components.rst  conf.py  configurations.rst  design.rst  index.rst  modules.rst  ordering.rst  protocols.rst
models/arc/: 51013 Arc Trellis.dxf  51014 Arc Trellis Mount.dxf  51014 Arc Trellis Mount.step  51015 Arc Trellis Mount Mirror.dxf  51015 Arc Trellis Mount Mirror.step  J009962 Arc Adjust.step  J009963 Arc Adjust Mirror.step  J009970 Arc Clamp.step
models/arc-slider/: 51016 Cover.step  51018 Carriage.step  J009515 Guide Pin.step
models/camera-module/: 51019 Camera Module Cap.step  J009974 Focus Motor Bracket.step  J009975 WD Adjust Plate.step  J010016 Focus Motor Mount.step  J010017 Gonio Mount Plate.step
models/collimator-module/: J009976 Cable Cover.step  J010039 Spacer Block.step  J010040 Collimator Clamp.step  J010042 Collimator Mount.step  J010043 Collimator Cover.step
models/frame/: 0295-100-01 Mounting Bracket.step  J009946 Angle Plate.step  J009953 Elevator Side Spacer.step  J009954 Stage to Frame Connector.step  J009956 Connector Bar.step
models/probe-module/: 0295-250-01 Probe Module Interconnect.step  0295-251-01 Probe Clamp Base.step  0295-251-02 Probe Clamp Hinge.step  51017 Probe Module Cap.step  J008605 Spacer Block.step  J009927 Handle.step  J009971 Indicator Dial.step  J009972 Knob.step  J010091 Mounting Rod.step
