[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-insertion-system"
description = "A flexible, scalable extracellular electrophysiology rig"
license = {text = "Allen Institute Hardware License"}
requires-python = ">=3.7"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
version = "1.0"

dependencies = [
]

[project.optional-dependencies]

docs = [
    'Sphinx',
    'sphinx-jinja',
    'furo'
]

